--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Downloader</title>
 </head>
+
 <body>
     <h1>YouTube Downloader</h1>
     <form id="video-form">
@@ -12,6 +14,8 @@
         <button type="submit">go</button>
     </form>
     <div id="video-info"></div>
+    <div id="video-player"></div>
     <script src="/static/js/main.js"></script>
 </body>
+
 </html>
